[project]
name = "rysk-options"
version = "0.1.0"
description = "Rysk covered call analyzer"
authors = [
    {name = "Carlisle"}
]
readme = "README.md"
requires-python = "^3.9"
dependencies = [
    "plotly (>=5.0,<6)",
    "web3 (>=7.14.0,<8.0.0)",
    "flask (>=2.0,<4)",
    "requests (>=2.25,<3)",
    "hyperliquid-python-sdk"
]


[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
